fix replica set cursor cleaning through mongos SERVER-2505 fix cursor cleaning in mongos generally by not doing lazy cleaning